@@ -231,11 +231,6 @@ class TypeInformation(SimpleItemWithProperties, ActionProviderBase):
         if contentType in self.allowed_content_types:
             return 1
 
-        # Backward compatibility for code that expected Type() to work.
-        for ti in self.listTypeInfo():
-            if ti.Title() == contentType:
-                return ti.getId() in self.allowed_content_types
-
         return 0
 
     security.declarePublic('getId')
